chore: General Fixes and Refactoring